# avionics

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_cli.sh  init.sh  x.sh
at1/: .cproject  at1.ioc  at1.launch
at1/Core/Src/: main.c  stm32g0xx_hal_msp.c
avlib/: error.h  i2c.c  i2c.h  log.h  mpu6050.c  mpu6050.h  usart.c  usart.h
avrlib/: error.h  i2c.c  i2c.h  mpu6050.c  mpu6050.h  usart.c  usart.h
devtools/: .gdbinit  Makefile  serial_interactive.py  x.sh
devtools/blinky-avr/: Makefile
devtools/blinky-esp32/: README.md
devtools/blinky-esp32/main/: app_main.c
devtools/blinky/src/: Makefile
devtools/cli/: CMakeLists.txt  Makefile
devtools/cli/cli/: build.c  buildtools.c  buildtools.h  main.c
fc1/: Makefile  README.md  TODO.md
fc1/fc1board/: fc1board.kicad_pro  fc1board.kicad_sch  sym-lib-table
fc1/src/: Makefile  main.c
fc2/: .cproject  .mxproject  CMakeLists.txt  README.md  fc2.ioc  fc2.launch  pytest_fc2.py  stm32cubeide_build.sh  x.sh
fc2/Core/Src/: main.c  stm32g0xx_hal_msp.c
fc2/fc2_board/: fc2_board.kicad_pro  fc2_board.kicad_sch
fc2/main/: main.c
fc3/: .cproject  CMakeLists.txt
fc3/Startup/: startup_stm32g070rbtx.s
fc3/src/: main.c  stm32g0xx_hal_conf.h  stm32g0xx_it.c
kicad_sym/: SAM-M10Q-00B.kicad_sym  XCVR_SAM-M10Q-00B.kicad_mod  avionics.kicad_sym
physics_sim/: CMakeLists.txt
physics_sim/glitter/sources/: main.cpp
physics_sim/include/: data.hpp  render.hpp
physics_sim/src/: data.cpp  main.cpp  render.cpp
sensor_calibrate/: .envrc  README.md  sdkconfig
sensor_calibrate/main/: app_main.c
stl/: BreadboardVise_v1.stl
stlib/: .cproject  CMakeLists.txt
stlib/Inc/: bme280.h  control.h  error.h  icm20948.h  log.h  mpu6050.h  quadcopter.h  sam_m10q.h
stlib/Src/: bme280.c  control.c  error.c  icm20948.c  log.c  mpu6050.c  quadcopter.c  sam_m10q.c
stlib/test/: CMakeLists.txt  stm32g0xx_hal_conf.h  test_control.c
